--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -3,10 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Saira:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>portfolio</title>
 </head>
-<body>
+<body class="saira-normal">
     <header>
         <nav class="flex">
             <div class="logo">
@@ -25,8 +28,8 @@
                 <h3>Hi, I am</h3>
                 <h1>Ahsan Habib</h1>
                 <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
-                <button class="btn">Download CV</button>
-                <button class="btn">Contact</button>
+                <button class="  btn">Download CV</button>
+                <button class=" b1 ">Contact</button>
             </div>
             <div class="bimg"><img src="./images/hardy.png" alt=""></div>
         </section>
@@ -91,46 +94,47 @@
             </div>
         </section>
         <section>
-            <h3>
+            <h1 class="summary">
                 A summary of My Resume
-            </h3>
+            </h1>
             <div class="resume flex">
     
             <div class="education">
-                <h1>My Education</h1>
+                <h2>My Education</h2>
                 <h3>Master in Electrical Engineering</h3>
-                <h6>Harvard University / 2015 - 2017</h6>
+                <h4>Harvard University / 2015 - 2017</h4>
                 <p>List skill/technologies here. You can change the icon above 
 to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
-                <hr>
+                <hr style="border: none; height: 1px; background-color: #757575;">
                 <h3>Master in Electrical Engineering</h3>
-                <h6>Harvard University / 2015 - 2017</h6>
+                <h4>Harvard University / 2015 - 2017</h4>
                 <p>List skill/technologies here. You can change the icon above 
 to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
-                <hr>
+               <hr style="border: none; height: 1px; background-color: #757575;">
+
                 <h3>Master in Electrical Engineering</h3>
-                <h6>Harvard University / 2015 - 2017</h6>
+                <h4>Harvard University / 2015 - 2017</h4>
                 <p>List skill/technologies here. You can change the icon above 
 to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
-                <hr>
+                <hr style="border: none; height: 1px; background-color: #757575;">
             </div>
             <div class="experience">
-                <h1>My Experience</h1>
+                <h2>My Experience</h2>
                 <h3>Sr. Font End Developer</h3>
-                <h6>Apple Inc / 2020 - Current</h6>
+                <h4>Apple Inc / 2020 - Current</h4>
                 <p>List skill/technologies here. You can change the icon above 
 to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
-                <hr>
+               <hr style="border: none; height: 1px; background-color: #757575;">
                 <h3>Sr. Font End Developer</h3>
-                <h6>Apple Inc / 2020 - Current</h6>
+                <h4>Apple Inc / 2020 - Current</h4>
                 <p>List skill/technologies here. You can change the icon above 
 to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
-                <hr>
+                <hr style="border: none; height: 1px; background-color: #757575;">
                 <h3>Sr. Font End Developer</h3>
-                <h6>Apple Inc / 2020 - Current</h6>
+                <h4>Apple Inc / 2020 - Current</h4>
                 <p>List skill/technologies here. You can change the icon above 
 to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
-                <hr>
+                <hr style="border: none; height: 1px; background-color: #757575;">
             
             </div>
         </div>
@@ -156,6 +160,8 @@ to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eg
         </form>
         <button class="btn">submit</button>
     </div>
+ 
+
 </footer>
 </body>
 </html>
